# gpu-homomorphic-encryption

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILDING.md  NTT_OPTIMIZATION.md
examples/: basic_encryption.cu  batch_processing.cu  homomorphic_operations.cu
include/: bigint.cuh  fhe.cuh  ntt.cuh  polynomial.cuh  rns.cuh
kernels/: ntt_kernels.cu  ptx_bigint.cuh
scripts/: benchmark.sh  install_deps.sh  profile.sh
src/: bigint.cu  fhe.cu  ntt.cu  polynomial.cu  rns.cu
tests/: test_fhe.cu
